--- a/0.9/config.toml
+++ b/0.9/config.toml
@@ -1,69 +1,99 @@
-bind-address = "0.0.0.0"
-port = 8086
 reporting-disabled = false
 
 [meta]
-  dir = "/var/opt/influxdb/meta"
-
-[initialization]
-  join-urls = ""
-
-[authentication]
-  enabled = false
-
-[admin]
-  enabled = true
-  port = 8083
-  assets = "/opt/influxdb/current/admin"
-
-[api]
-  bind-address = "0.0.0.0"
-  port = 8086
-
-[collectd]
-  enabled = false
-
-[opentsdb]
-  enabled = false
-
-[udp]
-  enabled = false
-
-[broker]
-  dir = "/data/broker"
-  enabled = true
-  election-timeout = "0"
+  dir = "/root/.influxdb/meta"
+# peers = ["hosta:8909", "hostb:8909"]
+# hostname = "0.0.0.0"
+  bind-address = ":8088"
+  retention-autocreate = true
+  election-timeout = "1s"
+  heartbeat-timeout = "1s"
+  leader-lease-timeout = "500ms"
+  commit-timeout = "50ms"
 
 [data]
-  dir = "/data/db"
-  enabled = true
+  dir = "/root/.influxdb/data"
+  max-wal-size = 104857600
+  wal-flush-interval = "10m0s"
+  wal-partition-flush-delay = "2s"
   retention-auto-create = true
   retention-check-enabled = true
   retention-check-period = "10m0s"
   retention-create-period = "45m0s"
 
-[snapshot]
-  enabled = false
+[cluster]
+  shard-writer-timeout = "5s"
 
-[logging]
+[retention]
+  enabled = true
+# replication = 3
+  check-interval = "10m0s"
+
+[shard-precreation]
+  enabled = true
+  check-interval = "10m0s"
+  advance-period = "30m0s"
+
+[admin]
+  enabled = true
+  bind-address = ":8083"
+
+[http]
+  enabled = true
+  bind-address = ":8086"
+  auth-enabled = false
+  log-enabled = true
   write-tracing = false
-  raft-tracing = false
-  level  = "info"
-  file   = "/opt/influxdb/shared/log.txt"
+  pprof-enabled = false
+
+[[graphite]]
+  bind-address = ":2003"
+  database = "graphite"
+  enabled = false
+  protocol = "tcp"
+  batch-size = 0
+  batch-timeout = "0"
+  consistency-level = "one"
+  separator = "."
+
+[collectd]
+  enabled = false
+  bind-address = ":25826"
+  database = "collectd"
+  retention-policy = ""
+  batch-size = 5000
+  batch-timeout = "10s"
+  typesdb = "/usr/share/collectd/types.db"
+
+[opentsdb]
+  enabled = false
+  bind-address = ":4242"
+  database = "opentsdb"
+  retention-policy = ""
+  consistency-level = "one"
+
+[udp]
+  enabled = false
+  bind-address = ""
+  database = ""
+  batch-size = 0
+  batch-timeout = "0"
 
 [monitoring]
   enabled = false
-
-[debugging]
-  pprof-enabled = false
+  write-interval = "1m0s"
 
 [continuous_queries]
+  enabled = true
   recompute-previous-n = 2
   recompute-no-older-than = "10m0s"
   compute-runs-per-interval = 10
   compute-no-more-than = "2m0s"
-  disabled = false
 
 [hinted-handoff]
   enabled = true
-  dir = "/var/opt/influxdb/hh"
+  dir = "/root/.influxdb/hh"
+  max-size = 1073741824
+  max-age = "168h0m0s"
+  retry-rate-limit = 0
+  retry-interval = "1s"
